rodando na vercel a api

--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "name": "Rafael Borba"
   },
   "scripts": {
-    "dev": "node server.js"
+    "dev": "node api/index.js"
   },
   "license": "MIT",
   "dependencies": {
